[feat] added auth, profile
